--- a/pages/posts/posts.wxml
+++ b/pages/posts/posts.wxml
@@ -1,10 +1,16 @@
+<import src="post-item/post-item-template.wxml" />
 <view>
     <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" class="swiper" interval='{{interval}}' duration="{{duration}}" circular="{{circular}}">
-        <block wx:for="{{imgUrls}}">
+        <block wx:for="{{imgUrls}}" wx:key="item">
             <swiper-item>
             <image src="{{item}}" class="slide-image"/>
             </swiper-item>
         </block>
         
     </swiper>
+    <block wx:for="{{postData}}" wx:key="item">
+        <view bindtap="onPostDetail" data-postid="{{item.postId}}">
+            <template is="postItem" data="{{item}}" />
+        </view>
+    </block>
 </view>
