--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,3 +1,19 @@
-<view>
-    zhe shi detail ye mian
+<view class="container">
+    <image class="top-image" src="{{musicPlay ? list.music.coverImg: list.headImgSrc}}"></image>
+    <image class="music-image" bindtap="playMusic" src="{{musicPlay ? '/images/music/music-stop.png': '/images/music/music-start.png'}}"></image>
+    <view class="avatar">
+        <image src="{{list.avatar}}"></image>
+        <text>{{list.author}}</text>
+        <text>发表于</text>
+        <text>{{list.dateTime}}</text>
+    </view>
+    <text class="title">{{list.title}}</text>
+    <view class="icons">
+        <image catchtap="onShare" src="/images/icon/share.png"></image>
+        <image wx:if="{{isCollection}}" bindtap="onCollection"  src="/images/icon/collection.png"></image>
+        <image wx:else bindtap="onCollection"  src="/images/icon/collection-anti.png"></image>
+    </view>
+    <text class="content">
+        {{list.detail}}
+    </text>
 </view>
