--- a/pages/welcome/index.wxss
+++ b/pages/welcome/index.wxss
@@ -1,7 +1,17 @@
 /**index.wxss**/
 page{
   height:  100%;
+  background: #b3d4db;
 }
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+} 
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -25,7 +35,7 @@ page{
   line-height: 80rpx;
   font-size: 26rpx;
   text-align: center;
-  border: 1rpx solid #ccc;
+  border: 1rpx solid #a0bcc6;
   border-radius: 4rpx;
   margin-top: 200px;
 }
