--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,6 +1,6 @@
 <import src="movie-container/movie-container-template.wxml" />
 <view>
-    <template is="movieContainer" data="{{...inTheaters}}" />
-    <template is="movieContainer" data="{{...comingSoon}}" />
-    <template is="movieContainer" data="{{...Top}}" />
+    <template is="movieContainer" data="{{...in_theaters}}" />
+    <template is="movieContainer" data="{{...coming_soon}}" />
+    <template is="movieContainer" data="{{...top250}}" />
 </view>
